--- a/Pipfile
+++ b/Pipfile
@@ -1,3 +1,14 @@
+[[source]]
+url = "https://pypi.org/simple"
+verify_ssl = true
+name = "pypi"
+
+[dev-packages]
+pylint = "*"
+
 [packages]
-cloudless = {editable = true, ref = "master", git = "https://github.com/getcloudless/cloudless"}
-hvac = "*"
+cloudless = "*"
+python-consul = "*"
+
+[requires]
+python_version = "3.6"
